Fix hotkey suggestion wrapping.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -50,11 +50,16 @@ div.app {
 }
 
 .suggestions {
+  position: absolute;
+  top: 0px;
   display: flex;
+  flex-wrap: wrap;
+  row-gap: 10px;
   column-gap: 15px;
   padding: 0px 10px;
   line-height: 0;
   margin: 10px 0;
+  pointer-events: none;
 }
 
 .key-suggestion {
